# ShortKit-ML

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  404.html  Dockerfile  LICENSE  README.md  app.py  claude_desktop_config.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  tests.yml
api/adversarial-debiasing/: index.html
api/background-randomization/: index.html
api/bias-direction-pca/: index.html
api/causal-effect/: index.html
api/cav/: index.html
api/contrastive-debiasing/: index.html
api/demographic-parity/: index.html
api/detector-base/: index.html
api/early-epoch-clustering/: index.html
api/embedding-sources/: index.html
api/equalized-odds/: index.html
api/explanation-regularization/: index.html
api/frequency/: index.html
api/gce/: index.html
api/generative-cvae/: index.html
api/geometric/: index.html
api/gradcam/: index.html
api/groupdro/: index.html
api/hbac/: index.html
api/intersectional/: index.html
api/last-layer-retraining/: index.html
api/probes/: index.html
api/reporting/: index.html
api/shortcut-detector/: index.html
api/shortcut-masking/: index.html
api/sis/: index.html
api/spray/: index.html
api/ssa/: index.html
api/statistical/: index.html
api/vae/: index.html
assets/: color-contrast.css
benchmark_methods/: index.html
contributing/: index.html
data/: .gitattributes  .gitignore  README.md
docs/: benchmark_methods.md  contributing.md  index.md  mcp-server.md  reproducibility.md
docs/api/: adversarial-debiasing.md  background-randomization.md  bias-direction-pca.md  causal-effect.md  cav.md  contrastive-debiasing.md  demographic-parity.md  detector-base.md  early-epoch-clustering.md  embedding-sources.md  equalized-odds.md  explanation-regularization.md  frequency.md  gce.md  generative-cvae.md  geometric.md  gradcam.md  groupdro.md  hbac.md  intersectional.md  last-layer-retraining.md  probes.md  reporting.md  shortcut-detector.md  shortcut-masking.md  sis.md  spray.md  ssa.md  statistical.md  vae.md
docs/assets/: color-contrast.css
docs/examples/: advanced.md  basic.md  real-data.md
docs/getting-started/: dashboard.md  installation.md  quickstart.md
docs/methods/: adversarial-debiasing.md  background-randomization.md  bias-direction-pca.md  causal-effect.md  cav.md  contrastive-debiasing.md  demographic-parity.md  early-epoch-clustering.md  equalized-odds.md  explanation-regularization.md  frequency.md  gce.md  generative-cvae.md  geometric.md  gradcam.md  groupdro.md  hbac.md  intersectional-analysis.md  last-layer-retraining.md  overview.md  probe.md  shortcut-masking.md  sis.md  spray.md  ssa.md  statistical.md  vae.md
docs/testing/: playwright-e2e.md
examples/: 04_risk_recommendations.ipynb  paper_benchmark_config_reproducible.json  ssa_example.py
examples/01_basic_usage/: 01_unified_api_demo.ipynb  02_hbac_clustering_demo.ipynb  03_statistical_testing_demo.ipynb
examples/02_real_data/: embeddings_analysis.ipynb  medical_imaging_demo.ipynb
examples/advanced/: index.html
examples/basic/: index.html
examples/output/: comprehensive_shortcut_report.html
examples/real-data/: index.html
getting-started/dashboard/: index.html
mcp-server/: index.html
output/: shortcut_report.html  spray_single_image_gradcam_test.html  test_embeddings.csv  test_embeddings.json  test_group_labels.csv  test_group_labels.json  test_labels.csv  test_labels.json
reproducibility/: index.html
scripts/: copy_figures_to_paper.sh  extract_celeba_embeddings.py  extract_chexpert_embeddings.py  extract_chexpert_hf_multibackbone.py  extract_chexpert_parallel.sh  generate_all_paper_tables.py  generate_correction_plot.py  generate_gradcam_supplement.py  generate_lda_figure.py  generate_paper_figures.py  generate_statistical_tables.py  generate_umap_plots.py  join_mimic_diagnosis_labels.py  reproduce_paper.sh  run_baseline_comparison.py  run_celeba_benchmark.py  run_celeba_real_benchmark.py  run_chexpert_benchmark.py  run_chexpert_multibackbone_benchmark.py  run_dataset2_benchmark.py  run_homogeneous_cohort_analysis.py  run_mimic_benchmark.py  run_per_diagnosis_cross_dataset.py  setup_celeba_data.py  setup_chexpert_data.py  setup_mimic_cxr_data.py  test_reproducibility.py
search/: search_index.json
shortcut_detect/: __init__.py  base_builder.py  datasets.py  detector_base.py  detector_template.py  discovery.py  embedding_sources.py  gradcam.py  mcp_server.py  metrics.py  model_registry.py  unified.py  utils.py
tests/: __init__.py  test_adversarial_debiasing.py  test_aggregation_formula.py  test_background_randomizer.py  test_baseline_comparison.py  test_benchmark.py  test_benchmark_synthetic.py  test_causal.py  test_causal_effect.py  test_causal_effect_loader_integration.py  test_cav.py  test_cav_loader_integration.py  test_clustering.py  test_conditions.py  test_contrastive_debiasing.py  test_convergence_viz.py  test_copilot_mcp_config.py  test_dashboard.py  test_detector_base.py  test_detector_factory.py  test_early_epoch_clustering.py  test_edge_cases.py  test_effect_size_calibration.py  test_embedding_mode.py  test_explanation_regularization.py  test_fairness.py  test_figures.py  test_fp_analysis.py  test_frequency.py  test_gce.py  test_geometric.py  test_gradcam.py  test_gradcam_mask_overlap.py  test_groupdro.py  test_last_layer_retraining.py  test_mcp_server.py  test_measurement_harness.py  test_method_utils.py  test_model_comparison.py  test_model_registry.py  (+19 more)
(+252 files in other folders)
